correct whitespace on mobile

--- a/theme.css
+++ b/theme.css
@@ -39,8 +39,8 @@ button img {
 .headline {
     display: flex;
     gap: 3rem;
-    margin-top: 16%;
-    margin-bottom: -2%;
+    margin-top: 10rem;
+    margin-bottom: -5rem;
 }
 
 .headline img {
